# Ptalk

./: README.md  extra_script.py  partitions_16mb_ota.csv  platformio.ini  sdkconfig.esp32dev
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CODE_CHANGES.md  EMOTION_REFACTOR_SUMMARY.md  EMOTION_REFACTOR_VERIFICATION.md  EMOTION_SYSTEM.md  MQTT_SPEC.md  SERVER_WS_CONFIG_GUIDE.md  Software_Architecture.md  WEBSOCKET_CONFIG_IMPLEMENTATION.md  WEBSOCKET_CONFIG_PROTOCOL.md  WEBSOCKET_CONFIG_QUICKSTART.md  WEBSOCKET_CONFIG_README.md  WEBSOCKET_CONFIG_SUMMARY.md  mqtt_server.md
include/system/: MQTTConfig.hpp  WSConfig.hpp
lib/audio/: AdpcmCodec.cpp  I2SAudioInput_INMP441.cpp  I2SAudioInput_INMP441.hpp  I2SAudioOutput_MAX98357.cpp  I2SAudioOutput_MAX98357.hpp  OpusCodec.cpp  OpusCodec.hpp
lib/display/: AnimationPlayer.cpp  AnimationPlayer.hpp  Display.cpp  (+2 more)
server_test/: dummy_server.py  dummy_server_cmd.py  serverOLD.py
src/: AppController.cpp  AppController.hpp  CMakeLists.txt  DeviceProfile.cpp  DeviceProfile.hpp  Version.hpp  main.cpp
src/assets/emotions/: happy.cpp  sad.cpp  thinking.cpp
src/assets/icons/: critical_power.hpp
src/assets/logos/: logo1.hpp  logo2.hpp
src/assets/tools/: convert_assets.py
src/config/: DeviceProfile.cpp
src/system/: AudioManager.cpp  AudioManager.hpp  BluetoothService.cpp  BluetoothService.hpp  DisplayManager.cpp  DisplayManager.hpp  NetworkManager.cpp  NetworkManager.hpp  OTAUpdater.cpp  OTAUpdater.hpp  PowerManager.cpp  PowerManager.hpp  StateManager.cpp  StateManager.hpp  StateTypes.hpp
test/: dummy_server.py
(+11 files in other folders)
